# GEOS

./: .gitignore  .integrated_tests.yaml  BASELINE_NOTES.md  RELEASE  RELEASE_NOTES.md
.devcontainer/: devcontainer.json
.github/: CODEOWNERS
.github/workflows/: build_and_test.yml  ci_tests.yml  compliance.yml  coverage.yml  cpu_builds.yml  deploy.yml  gpu_builds.yml  integrated_tests.yml
.vscode-codespaces/: launch.json  settings.json
examples/ObjectCatalog/: Base.hpp  Derived2.cpp  main.cpp
host-configs/: tpls.cmake
host-configs/CVX/: CPU-NOOPT-Hypre-GCC-ompi_hpcx-OMP.cmake  CPU-NOOPT-Hypre-GCC_10.2.0-ompi_hpcx-OMP.cmake  CPU-OPTO1-Hypre-GCC-ompi_hpcx-OMP.cmake  CPU-OPTO1-Hypre-GCC_10.2.0-ompi_hpcx-OMP.cmake  CPU-OPTO2-Hypre-GCC-ompi_hpcx-OMP.cmake  CPU-OPTO2-Hypre-GCC_10.2.0-ompi_hpcx-OMP.cmake  CPU-OPTO3-Hypre-GCC-impi_2021.08-OMP.cmake  CPU-OPTO3-Hypre-GCC-mpi-OMP.cmake  CPU-OPTO3-Hypre-GCC-mpi-noOMP.cmake  CPU-OPTO3-Hypre-GCC-ompi_hpcx-OMP.cmake  CPU-OPTO3-Hypre-oblas-GCC_10.4.0-ompi_hpcx-OMP.cmake  CPU-OPTO3fast-Hypre-GCC_10.2.0-ompi_hpcx-OMP.cmake  CPU-OPTO3fast-Zen3-Hypre-GCC-ompi_hpcx-OMP.cmake  CPU-OPTO3fast-Zen3-Hypre-MPI-OMP.cmake  CPU-OPTO3fast-Zen4-Hypre-MPI-OMP.cmake  CPU-OPTO3fastmath-GCC-MPI-OMP.cmake  CPU-OPTO3fastmath-Hypre-GCC-ompi_hpcx-OMP.cmake  CPU-OPTO3fastmath-Hypre-GCC_13.2.0-ompi_hpcx-OMP.cmake  CPU-OPTO3fastmath-Zen3-GCC-MPI-OMP.cmake  CPU-OPTO3fastmath-Zen3-Hypre-GCC-ompi_hpcx-OMP.cmake  CPU-OPTO3fastmath-Zen4-GCC-MPI-OMP.cmake  CPU-OPTO3fastmath-Zen4-GCC-impi_1api-OMP.cmake  CPU-OPTO3fastmath-Zen5-GCC-MPI-OMP.cmake  CPU-OPTO3fastmath-avx512-GCC-MPI-OMP.cmake  CPU-base-GCC-mpi-OMP.cmake  GPU-GH200-Hypre-oblas-GCC-CUDA_12.2-ompi_hpcx-OMP.cmake  GPU-Hopper-Hypre-GCC-CUDA-MPI-OMP.cmake  GPU-Hopper-Hypre-GCC-CUDA_11.8-MPI-OMP.cmake  GPU-Hypre-GCC-CUDA-MPI-OMP.cmake  GPU-Hypre-GCC-CUDA-impi_2021.08-OMP.cmake  GPU-Hypre-GCC-CUDA_12.2-impi_2021.08-OMP.cmake  GPU-Hypre-GCC-CUDA_12.2-ompi_hpcx-OMP.cmake  GPU-Hypre-oblas-GCC-CUDA_12.2-ompi_hpcx-OMP.cmake  GPU-OPTO3-Hypre-GCC-CUDA-MPI-OMP.cmake
host-configs/LLNL/: amdgpu-base.cmake  dane-base.cmake  dane-clang-14.cmake  lassen-base.cmake  lassen-clang-10-cuda-11.cmake  lassen-clang-13-cuda-11-mpm.cmake  lassen-clang-13-cuda-11-mpmOnly.cmake  lassen-clang-13-cuda-11.cmake  lassen-clang-13-cuda-12.cmake  lassen-gcc-8-cuda-11.cmake  ruby-clang-14-mpm.cmake  (+8 more)
scripts/: ci_build_and_test_in_container.sh  copyrightPrepender.py  pygeosx_preprocess.py  setupPythonEnvironment.bash  validateXMLFiles.bash
src/: CMakeLists.txt  conf.py
src/coreComponents/events/: CMakeLists.txt  EventBase.cpp  EventBase.hpp  EventManager.cpp  EventManager.hpp  HaltEvent.cpp  HaltEvent.hpp  LogLevelsInfo.hpp
src/coreComponents/events/mpmEvents/: BoreholePressureMPMEvent.hpp  MPMEventBase.cpp  MPMEventManager.cpp
src/coreComponents/events/tasks/: TaskBase.cpp  TaskBase.hpp  TasksManager.cpp
(+1301 files in other folders)
